# darwincore

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: AsyncLogger.cpp.9E7F762551A1793B.idx  AsyncLogger.h.B17E039630C91119.idx  AsyncQueue.cpp.5C960C2BC49358B0.idx  AsyncQueue.h.73591B5E9499DDFB.idx  BitSet.cpp.FFA1F08297FAD901.idx  BitSet.h.24C645D6A925F889.idx  BloomFilter.cpp.D259EC0C3D89AB4E.idx  BloomFilter.h.DE42D56C5586867F.idx  Calendar.cpp.B84C408E538F13E2.idx  Calendar.h.D901C24E59F282B8.idx  Common.cpp.531158A5138870A7.idx  Common.h.BF532C5C9AECD453.idx  DateTime.cpp.F1AC2414FCB2D2FC.idx  DateTime.h.C47F9B2120553A85.idx  DirectoryIterator.cpp.3217D0E6F9A0AEBE.idx  DirectoryIterator.h.A0907BA41193CE13.idx  Dispatch.cpp.9D8C246070E8D95B.idx  Dispatch.h.477FC5B92B859FBB.idx  Duration.cpp.9ACB4A704C2FB569.idx  Duration.h.4DF00FA69643322E.idx  Encoding.cpp.4A40395184F37401.idx  Encoding.h.1C7F88BDD578A14B.idx  FileHandle.cpp.06B1ED6E986ECD06.idx  FileHandle.h.4E14BA34399D82BA.idx  FileLock.cpp.AE661D13DA65D5ED.idx  FileLock.h.FD9D7BE4CCE0344D.idx  FileManager.cpp.C44F97E16AE95361.idx  FileManager.h.2F83BF9859E21D23.idx  FilePath.cpp.EA0FE117AA8F1AFD.idx  FilePath.h.3DE7EDAB723C1663.idx  FileWatcher.cpp.2A3BC5CB8950B700.idx  FileWatcher.h.4347446649DD08E2.idx  Hash.cpp.D5D0989FCD02686A.idx  Hash.h.CF6C6D285F6020D4.idx  Lock.cpp.209F0DDB9870146A.idx  Lock.h.0E93600E06F8B3FF.idx  LogFormatter.cpp.D2B64FDDD7160980.idx  LogFormatter.h.767F169001C4A709.idx  LogRotate.cpp.8228A157E71AC94F.idx  LogRotate.h.10762CAC4CA09FAE.idx  (+66 more)
.claude/: settings.local.json
docs/: network_reactor_worker_redesign.md
include/darwincore/network/: client.h  server.h
src/darwincore/network/: acceptor.cpp  acceptor.h  client.cpp  client_reactor.cpp  client_reactor.h  concurrent_queue.h  io_monitor.cpp  io_monitor.h  reactor.cpp  reactor.h  server.cpp  worker_pool.cpp  worker_pool.h
test/: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md  TEST_REPORT.md  TEST_UPDATE_SUMMARY.md  protocol_echo_client.cpp  protocol_echo_server.cpp  run_tests.sh  server_client_test.cpp  test_config.hpp  test_kqueue_core.cc  test_reactor_operation_stats.cpp  test_reactor_wakeup.cpp  test_server_high_concurrency.cpp  test_server_options.cpp  test_server_soak.cpp  test_server_statistics.cpp  test_sigpipe.cc  test_stress_concurrency.cc  test_worker_pool_dispatch.cpp
